
* Library: added theory Coinductive_List of potentially infinite lists
as greatest fixed-point.

* Library: added theory AssocList which implements (finite) maps as
association lists.

* New proof method "evaluation" for efficiently solving a goal
  (i.e. a boolean expression) by compiling it to ML. The goal is
  "proved" (via the oracle "Evaluation") if it evaluates to True.


*** HOL-Complex ***

* Theory Real: new method ferrack implements quantifier elimination
for linear arithmetic over the reals. The quantifier elimination
feature is used only for decision, for compatibility with arith. This
means a goal is either solved or left unchanged, no simplification.


*** ML ***

* Pure/library:

  val burrow: ('a list -> 'b list) -> 'a list list -> 'b list list
  val fold_burrow: ('a list -> 'c -> 'b list * 'd) -> 'a list list -> 'c -> 'b list list * 'd

The semantics of "burrow" is: "take a function with *simulatanously*
transforms a list of value, and apply it *simulatanously* to a list of
list of values of the appropriate type". Confer this with "map" which
would *not* apply its argument function simulatanously but in
sequence. "fold_burrow" has an additional context.

Both actually avoid the usage of "unflat" since they hide away
"unflat" from the user.

* Pure/library: functions map2 and fold2 with curried syntax for
simultanous mapping and folding:

    val map2: ('a -> 'b -> 'c) -> 'a list -> 'b list -> 'c list
    val fold2: ('a -> 'b -> 'c -> 'c) -> 'a list -> 'b list -> 'c -> 'c

* Pure/library: indexed lists - some functions in the Isabelle library
treating lists over 'a as finite mappings from [0...n] to 'a have been
given more convenient names and signatures reminiscent of similar
functions for alists, tables, etc:

  val nth: 'a list -> int -> 'a 
  val nth_update: int * 'a -> 'a list -> 'a list
  val nth_map: int -> ('a -> 'a) -> 'a list -> 'a list
  val fold_index: (int * 'a -> 'b -> 'b) -> 'a list -> 'b -> 'b
